--- a/src/common/styles/Container.module.css
+++ b/src/common/styles/Container.module.css
@@ -8,3 +8,10 @@
     justify-content: space-between;
     flex-wrap: wrap;
 }
+
+.button {
+    width: 100px;
+    height: 25px;
+    margin-bottom: 30px;
+
+}
