--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 .App {
 
 }
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    scroll-behavior: smooth
+
+}
