--- a/src/my works/work/Work.module.css
+++ b/src/my works/work/Work.module.css
@@ -1,5 +1,5 @@
 .work{
-    width: 350px;
+    width: 250px;
     background-color: #939191;
     min-height: 1px;
     display: flex;
@@ -8,10 +8,22 @@
     text-align: center;
 }
 
-.img{
+.imageContainer{
     height: 200px;
-    width: 350px;
-    background-color: #fff;
+    width: 250px;
+    background-color: #d2a54c;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.link{
+    background-color: #fc0404;
+    width: 100px;
+    height: 25px;
+    text-decoration: none;
+
 }
 
 .descriptionBlock{
@@ -21,8 +33,10 @@
 .title {
     background-color: #f3caca;
     text-align: left;
+    margin-bottom: 5px;
 }
 
 .description{
     background-color: #ffc6c6;
+    margin-bottom: 5px;
 }
