--- a/src/skills/Skills.module.scss
+++ b/src/skills/Skills.module.scss
@@ -1,7 +1,7 @@
 @import "../common/styles/sass/variables";
 
 .skillsBlock {
-    min-height: 100vh;
+    min-height: 70vh;
     background-color: $bgSecondColor;
 
 }
@@ -16,14 +16,13 @@
     }
 }
 
-.title {
-    background-color: #929292;
-}
+
 
 .skills {
-    border: 1px solid;
+    border: 1px solid red;
     width: 100%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin-top: 30px;
 }
