work on skills, contact and distantWork component and add scss

--- a/src/common/styles/Container.module.scss
+++ b/src/common/styles/Container.module.scss
@@ -17,7 +17,7 @@
 .button {
     width: 100px;
     height: 25px;
-    margin-bottom: 30px;
+    margin:30px 0  30px;
     background-color: $primaryColor;
     border: none;
 
