--- a/src/common/Components/Title/Title.module.scss
+++ b/src/common/Components/Title/Title.module.scss
@@ -5,7 +5,7 @@
     margin-bottom: 30px;
     h2 {
         font-family: 'Josefin Sans', sans-serif;
-        margin: 0;
+        margin: 30px 0 0;
         font-weight: 400;
         color: $textColor;
         text-transform: capitalize;
