--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -12,9 +12,12 @@
   height: 156px;
   color: $textColor;
   font-family: $titleFontFamily;
-
-  span {
+  @media (max-width: 1120px){
+    margin-top: 60px;
+  }
+  .greeting {
     font-size: 16px;
+
   }
   h1 {
     font-size: 40px;
@@ -53,7 +56,7 @@
   @media (max-width: 1120px) {
     max-width: 100%;
     justify-content: center;
-    margin: 0 auto;
+    margin:  0 auto;
   }
 }
 
