--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -10,14 +10,14 @@
         .socialNetworks {
             display: flex;
             justify-content: space-between;
-            width: 250px;
+            width: 600px;
             .SN {
-                font-size: 10px ;
-                width: 50px;
+                font-size: 20px ;
+                width: 150px;
                 height: 50px;
-                border: 1px solid;
-                background-color: #fff;
-            }
+                @include text($textFontFamily, 20px, 1.8);
+                      color:$primaryColor ;
+                          }
         }
         h3{
             @include text($textFontFamily, 12px, 1.8);
