--- a/src/skills/skill/Skill.module.scss
+++ b/src/skills/skill/Skill.module.scss
@@ -18,7 +18,7 @@
         padding: 0;
     }
     span{
-        margin: 5px 0 10px;
+        margin:  0 0 10px;
         @include text($textFontFamily, 14px, 1.8);
     }
 }
@@ -26,5 +26,6 @@
 .icon{
     height: 60px;
     width: 60px;
-
+color: $primaryColor ;
+    font-size: 40px;
 }
