--- a/src/common/styles/Container.module.scss
+++ b/src/common/styles/Container.module.scss
@@ -13,6 +13,11 @@
 }
 
 
+.descriptionBtn{
+    font-family:$textFontFamily ;
+    text-transform: uppercase;
+    position: relative;
+}
 
 *{
     box-sizing: border-box;
