--- a/src/contacts/Contacts.module.scss
+++ b/src/contacts/Contacts.module.scss
@@ -23,15 +23,26 @@
         font-family: $textFontFamily;
         border: 0.5px solid gray;
         color: gray;
+        outline: none;
+        padding-left: 5px;
 
+        &:focus {
+          border: none;
+        }
       }
 
       textarea {
-        height: 70px;
+        height: 90px;
+        padding-left: 5px;
         background-color: $bgSecondColor;
         font-family: $textFontFamily;
         border: 0.5px solid gray;
         color: gray;
+        outline: none;
+
+        &:focus {
+          border: none;
+        }
       }
     }
   }
