--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -2,27 +2,43 @@
 @import "../common/styles/sass/mixins";
 
 .footerBlock {
-    height: 30vh;
-    background-color: $bgSecondColor;
-    .footer {
+  min-height: 30vh;
+  background-color: $bgSecondColor;
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+
+    .socialNetworks {
+      margin: 20px;
+
+      display: flex;
+      justify-content: space-between;
+      min-width: 30px;
+      flex-wrap: wrap;
+      @media screen and (max-width: 430px) {
         display: flex;
+        justify-content: space-between;
         flex-direction: column;
-        .socialNetworks {
-            display: flex;
-            justify-content: space-between;
-            width: 600px;
-            .SN {
-                font-size: 20px ;
-                width: 150px;
-                height: 50px;
-                @include text($textFontFamily, 20px, 1.8);
-                      color:$primaryColor ;
-                          }
-        }
-        h3{
-            @include text($textFontFamily, 12px, 1.8);
-        }
+
+      }
+
+      .SN {
+        font-size: 20px;
+        min-width: 150px;
+        min-height: 50px;
+
+
+        @include text($textFontFamily, 20px, 1.8);
+        color: $primaryColor;
+      }
     }
+
+    h3 {
+      @include text($textFontFamily, 12px, 1.8);
+    }
+  }
 }
 
 
