--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -14,6 +14,8 @@
   font-family: $titleFontFamily;
   @media (max-width: 1120px){
     margin-top: 60px;
+  }@media (max-width: 450px){
+    margin-top: 20px;
   }
   .greeting {
     font-size: 16px;
@@ -55,6 +57,10 @@
   background-size: cover;
   @media (max-width: 1120px) {
     max-width: 100%;
+    justify-content: center;
+    margin:  0 auto;
+  }@media (max-width: 450px) {
+    max-width: 80%;
     justify-content: center;
     margin:  0 auto;
   }
