--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -1,5 +1,6 @@
 @import "./../common/styles/sass/variables";
 
+
 .mainBlock {
   height: 100vh;
   background-color: $bgColor;
@@ -12,15 +13,18 @@
   height: 156px;
   color: $textColor;
   font-family: $titleFontFamily;
-  @media (max-width: 1120px){
+  @media (max-width: 1120px) {
     margin-top: 60px;
-  }@media (max-width: 450px){
+  }
+  @media (max-width: 450px) {
     margin-top: 20px;
   }
+
   .greeting {
     font-size: 16px;
 
   }
+
   h1 {
     font-size: 40px;
     padding: 10px 0 10px;
@@ -28,20 +32,21 @@
     line-height: 1.2;
     letter-spacing: 5px;
     margin: 0;
+
     span {
-      font-size: 50px;
+      font-family: $titleFontFamily, 50px, 1.2, 700;
+      letter-spacing: 5px;
       position: relative;
+      z-index: 0;
       display: inline-block;
-      &::after {
-        content: "";
+      &:before{
+        content: '';
         position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 0;
+        width: 114%;
         height: 20px;
-        width: 100px;
+        background-color: $primaryColor;
+        bottom: 0;
         z-index: -1;
-        background: $primaryColor;
       }
     }
   }
@@ -58,11 +63,12 @@
   @media (max-width: 1120px) {
     max-width: 100%;
     justify-content: center;
-    margin:  0 auto;
-  }@media (max-width: 450px) {
+    margin: 0 auto;
+  }
+  @media (max-width: 450px) {
     max-width: 80%;
     justify-content: center;
-    margin:  0 auto;
+    margin: 0 auto;
   }
 }
 
