--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -1,75 +1,97 @@
 @import "./../common/styles/sass/variables";
 
+.particles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.3;
+}
 
 .mainBlock {
   height: 100vh;
   background-color: $bgColor;
-}
 
+  .text {
+    display: block;
+    width: 550px;
+    height: 156px;
+    color: $textColor;
+    font-family: $titleFontFamily;
+    @media (max-width: 1120px) {
+      margin-top: 60px;
+    }
+    @media (max-width: 450px) {
+      margin-top: 20px;
+    }
 
-.text {
-  display: block;
-  width: 550px;
-  height: 156px;
-  color: $textColor;
-  font-family: $titleFontFamily;
-  @media (max-width: 1120px) {
-    margin-top: 60px;
-  }
-  @media (max-width: 450px) {
-    margin-top: 20px;
-  }
+    .greeting {
+      font-size: 16px;
+    }
 
-  .greeting {
-    font-size: 16px;
-
-  }
-
-  h1 {
-    font-size: 40px;
-    padding: 10px 0 10px;
-    font-weight: 600;
-    line-height: 1.2;
-    letter-spacing: 5px;
-    margin: 0;
-
-    span {
-      font-family: $titleFontFamily, 50px, 1.2, 700;
+    h1 {
+      font-size: 40px;
+      padding: 10px 0 10px;
+      font-weight: 600;
+      line-height: 1.2;
       letter-spacing: 5px;
-      position: relative;
-      z-index: 0;
-      display: inline-block;
-      &:before{
-        content: '';
-        position: absolute;
-        width: 114%;
-        height: 20px;
-        background-color: $primaryColor;
-        bottom: 0;
-        z-index: -1;
+      margin: 0;
+
+      span {
+        font-family: $titleFontFamily, 50px, 1.2, 700;
+        letter-spacing: 5px;
+        position: relative;
+        z-index: 0;
+        display: inline-block;
+
+        &:before {
+          content: '';
+          position: absolute;
+          width: 114%;
+          height: 20px;
+          background-color: $primaryColor;
+          bottom: 0;
+          z-index: -1;
+        }
       }
+    }
+
+    p {
+      font-size: 30px;
     }
   }
 
-  p {
-    font-size: 30px;
+  .photo {
+    width: 344px;
+    height: 429px;
+    background-size: cover;
+    ::before {
+      content: '';
+      position: absolute;
+      height: 110%;
+      width: 105%;
+      border: 5px solid $primaryColor;
+      left: 15px;
+      top: -15px;
+      z-index: -1;
+    }
+
+    @media (max-width: 1120px) {
+      max-width: 100%;
+      justify-content: center;
+      margin: 0 auto;
+    }
+    @media (max-width: 450px) {
+      max-width: 80%;
+      justify-content: center;
+      margin: 0 auto;
+    }
+
   }
+
 }
 
-.photo {
-  width: 344px;
-  height: 429px;
-  background-size: cover;
-  @media (max-width: 1120px) {
-    max-width: 100%;
-    justify-content: center;
-    margin: 0 auto;
-  }
-  @media (max-width: 450px) {
-    max-width: 80%;
-    justify-content: center;
-    margin: 0 auto;
-  }
-}
+
 
 
