--- a/src/nav/Nav.module.scss
+++ b/src/nav/Nav.module.scss
@@ -1,13 +1,45 @@
 @import "../common/styles/sass/variables";
 
+//.nav {
+//  font-family: $textFontFamily;
+//  width: 300px;
+//  display: flex;
+//  justify-content: space-between;
+//
+//  color: $textColor;
+////  position: relative;
+//  z-index: 1;
+//  padding-left: 10px;
+//
+//    &:hover{
+//      text-decoration: none;
+//      color: $primaryColor
+//    }
+//  .active{
+//    color: $primaryColor
+//  }
+//}
+
 .nav {
-  font-family: $textFontFamily;
   width: 300px;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  text-decoration: none;
-  color: $textColor;
-  position: relative;
-  z-index: 1;
-  padding-left: 10px;
+  //: stretch;
+  white-space: nowrap;
+
+  a {
+    font-family: $titleFontFamily;
+    font-size: 16px;
+    font-weight: 400;
+    color: $textColor;
+    cursor: pointer;
+    &:hover{
+            text-decoration: none;
+            color: $primaryColor
+         }
+  }
+  .active{
+        color: $primaryColor
+      }
 }
