--- a/src/common/styles/Container.module.scss
+++ b/src/common/styles/Container.module.scss
@@ -2,104 +2,96 @@
 
 
 .container {
-
-    height: 100%;
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
+  height: 100%;
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 
-.descriptionBtn{
-    font-family:$titleFontFamily ;
-    text-transform: uppercase;
-    position: relative;
-    color: white;
+.descriptionBtn {
+  font-family: $titleFontFamily;
+  text-transform: uppercase;
+  position: relative;
+  color: white;
 }
 
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
 @keyframes blink {
-    0% {
-        left: -130%;
-    }
-    100% {
-        left: 130%;
-    }
+  0% {
+    left: -130%;
+  }
+  100% {
+    left: 130%;
+  }
 }
-
-
 
 
 .button {
-    position: relative;
-    margin: 10px;
-    overflow: hidden;
-    cursor: pointer;
-    width: 70px;
-    height: 30px;
-    outline: none;
-    border: none;
-    background-color: $primaryColor;
+  position: relative;
+  margin: 10px;
+  overflow: hidden;
+  cursor: pointer;
+  width: 70px;
+  height: 30px;
+  outline: none;
+  border: none;
+  background-color: $primaryColor;
+  color: $textColor;
+  font-family:$titleFontFamily;
+  text-align: center;
+
 }
 
 .button::after {
-    display: block;
-    content: '';
-    position: absolute;
+  display: block;
+  content: '';
+  position: absolute;
 
-    left: -130%;
-    top: 0;
-    height: 100%;
-    width: 20%;
+  left: -130%;
+  top: 0;
+  height: 100%;
+  width: 20%;
 
-    transform: skew(45deg);
-    background-color: white;
-    opacity: 0.7;
-    z-index: 14;
+  transform: skew(45deg);
+  background-color: white;
+  opacity: 0.7;
+  z-index: 14;
 }
 
 .button:hover::after {
-    animation: blink 0.55s ease;
+  animation: blink 0.55s ease;
 }
 
 .button:hover::before {
-    display: block;
-    content: '';
-    position: absolute;
+  display: block;
+  content: '';
+  position: absolute;
 
-    left: -100vw;
-    top: 0;
-    height: 100vh;
-    width: 300vw;
+  left: -100vw;
+  top: 0;
+  height: 100vh;
+  width: 300vw;
 
-    background-color: #fff;
-    opacity: 0.2;
-    z-index: 7;
+  background-color: #fff;
+  opacity: 0.2;
+  z-index: 7;
 }
 
-.button:focus{
-   width: 150px;
-    transition: all 0.3s ease-in-out;
-    background: #0243b3;
-    //outline: #667af6 solid 1px;
+.button:focus {
+  width: 150px;
+  transition: all 0.3s ease-in-out;
+  background: #0243b3;
+  //outline: #667af6 solid 1px;
 }
 
-.button:active{
-    background: $primaryColor;
+.button:active {
+  background: $primaryColor;
 }
 
-
-//.button1 {
-//    width: 100px;
-//    height: 25px;
-//    margin:30px 0  30px;
-//    background-color: $primaryColor;
-//    border: none;
-//
-//}
