add Particles from "react-tsparticles" add hover-effects refactor code...

--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -6,8 +6,9 @@
     background: $bgSecondColor;
 
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: center;
+
 
     position:  fixed;
     z-index: 1000;
