--- a/src/nav/Nav.module.scss
+++ b/src/nav/Nav.module.scss
@@ -25,21 +25,24 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  //: stretch;
   white-space: nowrap;
+  margin-right: 150px;
 
   a {
+    padding: 20px;
     font-family: $titleFontFamily;
-    font-size: 16px;
+    font-size: 25px;
     font-weight: 400;
     color: $textColor;
     cursor: pointer;
-    &:hover{
-            text-decoration: none;
-            color: $primaryColor
-         }
+
+    &:hover {
+      text-decoration: none;
+      color: $primaryColor
+    }
   }
-  .active{
-        color: $primaryColor
-      }
+
+  .active {
+    color: $primaryColor
+  }
 }
