--- a/src/common/styles/sass/variables.scss
+++ b/src/common/styles/sass/variables.scss
@@ -1,7 +1,7 @@
-$textColor: #fff;
+$textColor: #ffffff;
 $primaryColor: #4e93e6;
 $bgSecondColor: #252527;
-$bgColor: #1f1f20;
+$bgColor: #131313;
 
 $titleFontFamily: 'Josefin Sans', sans-serif;
 $textFontFamily: 'Poppins', sans-serif;
