--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -37,7 +37,9 @@
         position: relative;
         z-index: 0;
         display: inline-block;
-
+        @media (max-width: 450px){
+          font-family: $titleFontFamily, 35px, 1.2, 700;
+        }
         &:before {
           content: '';
           position: absolute;
@@ -56,7 +58,7 @@
   }
   .photo {
     min-width: 370px;
-    height: 470px;
+    height: 440px;
     background-size: cover;
     justify-content: center;
 
