--- a/src/my works/work/Project.module.scss
+++ b/src/my works/work/Project.module.scss
@@ -7,6 +7,7 @@
   min-height: 1px;
   display: flex;
   flex-direction: column;
+  margin-bottom: 30px;
 
   .imageContainer {
     height: 300px;
@@ -18,6 +19,7 @@
     background-repeat: no-repeat;
     position: relative;
 
+
     &:hover::before {
       position: absolute;
       content: '';
@@ -28,6 +30,7 @@
       right: 0;
       opacity: 0.8;
       transition: 0.9s;
+
     }
 
     .link {
