--- a/src/contacts/Contacts.module.scss
+++ b/src/contacts/Contacts.module.scss
@@ -11,7 +11,10 @@
     .form {
       display: flex;
       flex-direction: column;
-      width: 350px;
+      width: 650px;
+      @media (max-width: 800px) {
+        width: 400px;
+      }
       @media (max-width: 445px) {
         width: 250px;
       }
@@ -44,11 +47,15 @@
           border: none;
         }
       }
-      .btn{
-        margin: 20px  auto;
-      }
+
     }
   }
+}
+.sendMessage{
+  color: #02af02;
+  font-family: $textFontFamily;
+  font-size: 20px;
+  font-weight: 300;
 }
 
 
