--- a/src/nav/Nav.module.scss
+++ b/src/nav/Nav.module.scss
@@ -1,24 +1,6 @@
 @import "../common/styles/sass/variables";
 
-//.nav {
-//  font-family: $textFontFamily;
-//  width: 300px;
-//  display: flex;
-//  justify-content: space-between;
-//
-//  color: $textColor;
-////  position: relative;
-//  z-index: 1;
-//  padding-left: 10px;
-//
-//    &:hover{
-//      text-decoration: none;
-//      color: $primaryColor
-//    }
-//  .active{
-//    color: $primaryColor
-//  }
-//}
+
 
 .nav {
   width: 300px;
@@ -26,13 +8,16 @@
   flex-direction: row;
   justify-content: space-between;
   white-space: nowrap;
-  margin-right: 150px;
-  @media screen and (max-width: 890px) {
-    margin-right: 120px;
+  margin-right: 220px;
+  @media screen and (max-width: 520px) {
+    margin-right: 100px;
     justify-content: center;
   }
-  @media screen and (max-width: 455px) {
-    margin-right: 50px;
+  @media screen and (max-width: 485px) {
+    margin-right: 70px;
+    justify-content: center;
+  }@media screen and (max-width: 390px) {
+    margin-right: 40px;
     justify-content: center;
   }
   a {
@@ -45,8 +30,11 @@
     @media screen and (max-width: 890px) {
       font-size: 23px;
       padding: 15px;
-    } @media screen and (max-width: 390px) {
+    } @media screen and (max-width: 450px) {
       font-size: 20px;
+      padding: 5px;
+    }@media screen and (max-width: 390px) {
+      font-size: 17px;
       padding: 5px;
     }
 
